--- a/index.html
+++ b/index.html
@@ -3,82 +3,176 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio</title>
+  <title>Portfolio 3D</title>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
 
+    html {
+      scroll-behavior: smooth;
+    }
     * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+      margin: 0; padding: 0; box-sizing: border-box;
     }
-
-    html, body {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background: black;
+    body {
       font-family: 'Orbitron', sans-serif;
+      color: #66ccff;
+      background: black;
+      overflow-x: hidden;
     }
 
-    #overlay {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #3399ff;
-      font-size: 2.8rem;
+    /* NAV */
+    nav {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      background: rgba(0,0,0,0.7);
+      display: flex;
+      justify-content: center;
+      padding: 1rem 0;
+      z-index: 20;
+    }
+    nav a {
+      color: #66ccff;
+      text-decoration: none;
+      margin: 0 1.5rem;
+      font-size: 1.2rem;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #ffffff;
+    }
+
+    /* Hero */
+    #home {
+      position: relative;
+      width: 100%; height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
       z-index: 10;
-      text-shadow: 0 0 10px #3399ff, 0 0 20px #3399ff;
+    }
+    #home .overlay {
+      max-width: 80%;
+    }
+    #home h1 {
+      font-size: 3rem;
+      text-shadow: 0 0 10px #3399ff;
+      margin-bottom: 0.5rem;
+    }
+    #home p {
+      font-size: 1.5rem;
+      text-shadow: 0 0 5px #3399ff;
+    }
+
+    /* Sezioni */
+    .section {
+      position: relative;
+      max-width: 800px;
+      margin: 4rem auto;
+      padding: 2rem;
+      background: rgba(0,0,0,0.6);
+      border-radius: 10px;
+      box-shadow: 0 0 15px #3399ff55;
+      z-index: 10;
+    }
+    .section h2 {
+      margin-bottom: 1rem;
+      font-size: 2.2rem;
+      border-bottom: 2px solid #3399ff;
+      display: inline-block;
+    }
+    .section p {
+      margin-top: 1rem;
+      font-size: 1.1rem;
+      line-height: 1.4;
+    }
+
+    /* Canvas sotto le sezioni */
+    #canvas-container {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: 0;
     }
   </style>
 </head>
 <body>
-  <div id="overlay">Benvenuto nel mio universo.<br>Presto troverai qui i miei progetti.</div>
+
+  <!-- NAV -->
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#chi-sono">Chi Sono</a>
+    <a href="#competenze">Competenze</a>
+    <a href="#contatti">Contatti</a>
+  </nav>
+
+  <!-- HERO -->
+  <section id="home">
+    <div class="overlay">
+      <h1>Benvenuto nel mio universo</h1>
+      <p>Presto troverai qui i miei progetti</p>
+    </div>
+  </section>
+
+  <!-- SEZIONI DI ESEMPIO -->
+  <section id="chi-sono" class="section">
+    <h2>Chi Sono</h2>
+    <p>Sono un Visual Designer e 3D Artist appassionato di temi spaziali e futuristici. Amo esplorare nuovi modi di comunicare attraverso il design.</p>
+  </section>
+
+  <section id="competenze" class="section">
+    <h2>Competenze</h2>
+    <p>Modellazione 3D, Logo Design, Animazione, UI/UX Futuristica, Scripting Three.js.</p>
+  </section>
+
+  <section id="contatti" class="section">
+    <h2>Contatti</h2>
+    <p>Email: kanekighoul.dev@galaxy.net</p>
+    <p>GitHub: <a href="https://github.com/KanekiGhoul-dev" target="_blank" style="color:#66ccff;">KanekiGhoul-dev</a></p>
+  </section>
+
+  <!-- STARFIELD -->
+  <div id="canvas-container"></div>
 
   <script type="module">
     import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js';
     import { OrbitControls } from 'https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/controls/OrbitControls.js';
 
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Stelle
-    const starGeometry = new THREE.BufferGeometry();
-    const starCount = 2000;
-    const starVertices = [];
-
-    for (let i = 0; i < starCount; i++) {
-      starVertices.push((Math.random() - 0.5) * 100);
-      starVertices.push((Math.random() - 0.5) * 100);
-      starVertices.push((Math.random() - 0.5) * 100);
-    }
-
-    starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
-    const starMaterial = new THREE.PointsMaterial({ color: 0x3399ff, size: 0.5 });
-    const starField = new THREE.Points(starGeometry, starMaterial);
-    scene.add(starField);
-
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
     camera.position.z = 30;
+
+    const renderer = new THREE.WebGLRenderer({ antialias:true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.getElementById('canvas-container').appendChild(renderer.domElement);
+
+    // Crea il campo stellato
+    const starsGeo = new THREE.BufferGeometry();
+    const starCount = 2000;
+    const positions = new Float32Array(starCount * 3);
+    for (let i = 0; i < starCount * 3; i++) {
+      positions[i] = (Math.random() - 0.5) * 200;
+    }
+    starsGeo.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+    const starsMat = new THREE.PointsMaterial({ color:0x3399ff, size:0.5 });
+    const starField = new THREE.Points(starsGeo, starsMat);
+    scene.add(starField);
 
     const controls = new OrbitControls(camera, renderer.domElement);
     controls.enableZoom = false;
 
     function animate() {
       requestAnimationFrame(animate);
-      starField.rotation.y += 0.0005;
-      starField.rotation.x += 0.0002;
+      starField.rotation.y += 0.0007;
+      starField.rotation.x += 0.0003;
       renderer.render(scene, camera);
     }
-
     animate();
 
-    window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
+    window.addEventListener('resize', ()=>{
+      camera.aspect = window.innerWidth/window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
