--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      overflow: hidden;
+      overflow-x: hidden;
       font-family: 'Orbitron', sans-serif;
       color: #00bfff;
       background: #000;
@@ -27,7 +27,7 @@
       z-index: 1;
       text-align: center;
       padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(0, 0, 0, 0.7);
       margin: 2rem;
       border-radius: 15px;
       box-shadow: 0 0 15px #00bfff;
@@ -71,6 +71,23 @@
     a:hover {
       text-shadow: 0 0 10px #00bfff;
     }
+
+    /* Layout due colonne */
+    .flex-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+    }
+
+    .half-section {
+      flex: 1 1 400px;
+      max-width: 600px;
+    }
+
+    footer {
+      margin-bottom: 4rem;
+    }
   </style>
 </head>
 <body>
@@ -82,23 +99,25 @@
     <p>Modellatore 3D • Visual Designer • Creativo multidisciplinare</p>
   </header>
 
-  <div class="section">
-    <h2>Chi Sono</h2>
-    <p>Sono un appassionato di animazione e modellazione 3D. Amo dare vita alle idee attraverso forme, colori e movimento. Ogni progetto è per me un viaggio creativo dove tecnica e immaginazione si fondono.</p>
-  </div>
-
-  <div class="section">
-    <h2>Competenze</h2>
-    <div>
-      <span class="icon" title="Photoshop">🖌️</span>
-      <span class="icon" title="Illustrator">🎨</span>
-      <span class="icon" title="InDesign">📄</span>
-      <span class="icon" title="AutoCAD">📐</span>
-      <span class="icon" title="Inventor">⚙️</span>
-      <span class="icon" title="3ds Max">🏗️</span>
-      <span class="icon" title="Blender">🧊</span>
+  <div class="flex-container">
+    <div class="section half-section">
+      <h2>Chi Sono</h2>
+      <p>Sono un appassionato di animazione e modellazione 3D. Amo dare vita alle idee attraverso forme, colori e movimento. Ogni progetto è per me un viaggio creativo dove tecnica e immaginazione si fondono.</p>
     </div>
-    <p>Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max, Blender</p>
+
+    <div class="section half-section">
+      <h2>Competenze</h2>
+      <div>
+        <span class="icon" title="Photoshop">🖌️</span>
+        <span class="icon" title="Illustrator">🎨</span>
+        <span class="icon" title="InDesign">📄</span>
+        <span class="icon" title="AutoCAD">📐</span>
+        <span class="icon" title="Inventor">⚙️</span>
+        <span class="icon" title="3ds Max">🏗️</span>
+        <span class="icon" title="Blender">🧊</span>
+      </div>
+      <p>Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max, Blender</p>
+    </div>
   </div>
 
   <div class="section">
@@ -112,32 +131,35 @@
     © 2025 Elia Giordano. Tutti i diritti riservati.
   </footer>
 
-  <!-- Three.js via CDN -->
+  <!-- Three.js CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
   <script>
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    camera.position.z = 10;
+
     const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('bg'), alpha: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     renderer.setPixelRatio(window.devicePixelRatio);
 
     // Cube
-    const geometry = new THREE.BoxGeometry(3, 3, 3);
-    const material = new THREE.MeshStandardMaterial({ color: 0x00bfff, emissive: 0x00bfff, metalness: 0.8, roughness: 0.2 });
+    const geometry = new THREE.BoxGeometry(5, 5, 5); // più grande
+    const material = new THREE.MeshStandardMaterial({
+      color: 0x00bfff,
+      emissive: 0x00bfff,
+      metalness: 0.9,
+      roughness: 0.1
+    });
     const cube = new THREE.Mesh(geometry, material);
     scene.add(cube);
 
     // Light
-    const pointLight = new THREE.PointLight(0xffffff, 2);
-    pointLight.position.set(10, 10, 10);
+    const pointLight = new THREE.PointLight(0xffffff, 1.5);
+    pointLight.position.set(15, 10, 10);
     scene.add(pointLight);
+    scene.add(new THREE.AmbientLight(0x404040));
 
-    const ambientLight = new THREE.AmbientLight(0x404040);
-    scene.add(ambientLight);
-
-    camera.position.z = 10;
-
-    // Animate
+    // Animation loop
     function animate() {
       requestAnimationFrame(animate);
       cube.rotation.x += 0.01;
