--- a/index.html
+++ b/index.html
@@ -50,7 +50,33 @@
             color: #b0dfff;
         }
 
-        .section {
+        .dynamic-menu {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 2rem;
+        }
+
+        .dynamic-menu button {
+            padding: 10px 20px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #00bfff;
+            border: 2px solid #00bfff;
+            border-radius: 5px;
+            cursor: pointer;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+
+        .dynamic-menu button:hover {
+            background-color: #00bfff;
+            color: #000;
+            text-shadow: none;
+        }
+
+        .content-section {
+            display: none; /* Nascondi le sezioni inizialmente */
             padding: 2rem;
             text-align: center;
             background: rgba(0, 0, 0, 0.6);
@@ -59,39 +85,19 @@
             box-shadow: 0 0 15px #00bfff;
         }
 
-        .section h2 {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-
-        .section p {
-            font-size: 1.1rem;
+        .content-section.active {
+            display: block; /* Mostra la sezione attiva */
         }
 
         .competence-icons {
             display: flex;
             justify-content: center;
             gap: 20px;
+            margin-bottom: 1rem;
         }
 
         .competence-icons span {
             font-size: 4rem;
-            cursor: pointer;
-        }
-
-        .menu-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 2rem;
-        }
-
-        select {
-            font-size: 1rem;
-            padding: 10px;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #00bfff;
-            border: 2px solid #00bfff;
-            border-radius: 5px;
             cursor: pointer;
         }
 
@@ -101,7 +107,6 @@
             gap: 20px;
             margin-top: 2rem;
             flex-wrap: wrap;
-            display: none; /* Progetti nascosti inizialmente */
         }
 
         .project img,
@@ -170,6 +175,41 @@
             0% { opacity: 0.5; }
             100% { opacity: 0.8; }
         }
+
+        /* Nascondi inizialmente la vecchia struttura delle sezioni */
+        .section {
+            display: none;
+        }
+
+        /* Stili specifici per la sezione progetti all'interno del content-section */
+        #progetti .menu-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        #progetti select {
+            font-size: 1rem;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #00bfff;
+            border: 2px solid #00bfff;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #progetti .project {
+            display: none; /* Nascosti di default, gestiti dallo script */
+            justify-content: center;
+            gap: 20px;
+            margin-top: 1rem;
+            flex-wrap: wrap;
+        }
+
+        #blender-projects {
+            display: flex; /* Mostra i progetti Blender all'inizio (se vuoi) */
+        }
     </style>
 </head>
 <body>
@@ -184,19 +224,25 @@
         <div class="star" style="top: 20%; left: 65%;"></div>
         <div class="star" style="top: 40%; left: 45%;"></div>
         <div class="star" style="top: 90%; left: 15%;"></div>
-        </div>
+    </div>
 
     <header>
         <h1>Elia Giordano</h1>
         <p>Modellatore 3D • Visual Designer • Creativo dallo spazio</p>
     </header>
 
-    <div class="section">
+    <div class="dynamic-menu">
+        <button data-section="chi-sono">Chi Sono</button>
+        <button data-section="competenze">Competenze</button>
+        <button data-section="progetti">Progetti</button>
+    </div>
+
+    <div id="chi-sono" class="content-section active">
         <h2>Chi Sono</h2>
         <p>Appassionato di tecnologia, design e forme aliene. Creo esperienze visive uniche che spaziano dal design grafico alla modellazione 3D.</p>
-        </div>
+    </div>
 
-    <div class="section">
+    <div id="competenze" class="content-section">
         <h2>Competenze</h2>
         <div class="competence-icons">
             <span>🖌️</span>
@@ -205,67 +251,96 @@
             <span>✨</span>
         </div>
         <p>Modellazione 3D, Logo Design, UI futuristica, Animazioni spaziali, Blender, Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max</p>
-        </div>
-
-    <div class="menu-container">
-        <select id="software-select">
-            <option value="">Seleziona un software</option>
-            <option value="blender">Blender</option>
-            <option value="photoshop">Photoshop</option>
-            <option value="illustrator">Illustrator</option>
-            </select>
     </div>
 
-    <div id="blender-projects" class="project">
-        <img src="rubikimg.jpg" alt="Modello 3D di un cubo di Rubik" />
-        <video autoplay loop muted>
-            <source src="rubikvdo.gif" type="video/mp4" />
-        </video>
-        <img src="spherelumimg.jpg" alt="Modello 3D di uno spherelum" />
-        <video autoplay loop muted>
-            <source src="spherelums.gif" type="video/mp4" />
-        </video>
-        <img src="tazzinavdo.jpg" alt="Modello 3D di una tazzina" />
-        <video autoplay loop muted>
-            <source src="tazzinavdo.gif" type="video/mp4" />
-        </video>
+    <div id="progetti" class="content-section">
+        <h2>Progetti</h2>
+        <div class="menu-container">
+            <select id="software-select">
+                <option value="">Seleziona un software</option>
+                <option value="blender">Blender</option>
+                <option value="photoshop">Photoshop</option>
+                <option value="illustrator">Illustrator</option>
+            </select>
         </div>
-
-    <div id="photoshop-projects" class="project">
-        <img src="placeholder_photoshop1.jpg" alt="Progetto Photoshop 1" />
-        <img src="placeholder_photoshop2.jpg" alt="Progetto Photoshop 2" />
+        <div id="blender-projects" class="project">
+            <img src="rubikimg.jpg" alt="Modello 3D di un cubo di Rubik" />
+            <video autoplay loop muted>
+                <source src="rubikvdo.gif" type="video/mp4" />
+            </video>
+            <img src="spherelumsimg.jpg" alt="Modello 3D di uno spherelum" />
+            <video autoplay loop muted>
+                <source src="spherelumsvdo.gif" type="video/mp4" />
+            </video>
+            <img src="tazzinaimg.jpg" alt="Modello 3D di una tazzina" />
+            <video autoplay loop muted>
+                <source src="tazzinavdo.gif" type="video/mp4" />
+            </video>
         </div>
-
-    <div id="illustrator-projects" class="project">
-        <img src="placeholder_illustrator1.jpg" alt="Progetto Illustrator 1" />
-        <img src="placeholder_illustrator2.jpg" alt="Progetto Illustrator 2" />
+        <div id="photoshop-projects" class="project">
+            <img src="placeholder_photoshop1.jpg" alt="Progetto Photoshop 1" />
+            <img src="placeholder_photoshop2.jpg" alt="Progetto Photoshop 2" />
         </div>
+        <div id="illustrator-projects" class="project">
+            <img src="placeholder_illustrator1.jpg" alt="Progetto Illustrator 1" />
+            <img src="placeholder_illustrator2.jpg" alt="Progetto Illustrator 2" />
+        </div>
+    </div>
 
     <footer>
         © 2025 Elia Giordano. Tutti i diritti riservati.
-        </footer>
+    </footer>
 
     <script>
-        document.getElementById("software-select").addEventListener("change", function() {
-            const selectedSoftware = this.value;
-            const blenderProjects = document.getElementById("blender-projects");
-            const photoshopProjects = document.getElementById("photoshop-projects");
-            const illustratorProjects = document.getElementById("illustrator-projects");
+        const menuButtons = document.querySelectorAll('.dynamic-menu button');
+        const contentSections = document.querySelectorAll('.content-section');
+        const softwareSelect = document.getElementById("software-select");
+        const blenderProjects = document.getElementById("blender-projects");
+        const photoshopProjects = document.getElementById("photoshop-projects");
+        const illustratorProjects = document.getElementById("illustrator-projects");
 
-            // Nascondi tutte le sezioni di progetto
-            blenderProjects.style.display = "none";
-            if (photoshopProjects) photoshopProjects.style.display = "none";
-            if (illustratorProjects) illustratorProjects.style.display = "none";
+        // Mostra la prima sezione (Chi Sono) all'inizio
+        if (contentSections.length > 0) {
+            contentSections[0].classList.add('active');
+        }
 
-            // Mostra la sezione corrispondente
-            if (selectedSoftware === "blender") {
-                blenderProjects.style.display = "flex";
-            } else if (selectedSoftware === "photoshop") {
-                if (photoshopProjects) photoshopProjects.style.display = "flex";
-            } else if (selectedSoftware === "illustrator") {
-                if (illustratorProjects) illustratorProjects.style.display = "flex";
-            }
+        menuButtons.forEach(button => {
+            button.addEventListener('click', function() {
+                const targetSectionId = this.getAttribute('data-section');
+
+                // Nascondi tutte le sezioni di contenuto
+                contentSections.forEach(section => {
+                    section.classList.remove('active');
+                });
+
+                // Mostra la sezione target
+                const targetSection = document.getElementById(targetSectionId);
+                if (targetSection) {
+                    targetSection.classList.add('active');
+                }
+            });
         });
+
+        // Gestione della selezione del software nella sezione Progetti
+        if (softwareSelect) {
+            softwareSelect.addEventListener("change", function() {
+                const selectedSoftware = this.value;
+
+                // Nascondi tutte le sezioni di progetto
+                blenderProjects.style.display = "none";
+                if (photoshopProjects) photoshopProjects.style.display = "none";
+                if (illustratorProjects) illustratorProjects.style.display = "none";
+
+                // Mostra la sezione di progetto corrispondente
+                if (selectedSoftware === "blender") {
+                    blenderProjects.style.display = "flex";
+                } else if (selectedSoftware === "photoshop") {
+                    if (photoshopProjects) photoshopProjects.style.display = "flex";
+                } else if (selectedSoftware === "illustrator") {
+                    if (illustratorProjects) illustratorProjects.style.display = "flex";
+                }
+            });
+        }
     </script>
 </body>
 </html>
