--- a/index.html
+++ b/index.html
@@ -92,13 +92,14 @@
         .competence-icons {
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 30px; /* Aumentato il gap per icone più grandi */
             margin-bottom: 1rem;
         }
 
         .competence-icons span {
-            font-size: 4rem;
-            cursor: pointer;
+            font-size: 3rem; /* Ridotto leggermente per un aspetto più tecnico */
+            cursor: default; /* Rimosso il cursore interattivo */
+            color: #00bfff; /* Assicurati che il colore sia definito */
         }
 
         .project {
@@ -132,12 +133,12 @@
             margin-top: 4rem;
         }
 
-        a {
+        footer a {
             color: #00bfff;
             text-decoration: none;
         }
 
-        a:hover {
+        footer a:hover {
             text-shadow: 0 0 10px #00bfff;
         }
 
@@ -148,32 +149,45 @@
             width: 100%;
             height: 100%;
             z-index: -2;
-            animation: rotateStars 60s linear infinite;
+            /* Effetto di "attrazione" all'hover */
+            transition: transform 0.3s ease;
+        }
+
+        .starry-background:hover {
+            transform: scale(1.02); /* Leggero ingrandimento all'hover */
         }
 
         .starry-background .star {
             position: absolute;
-            width: 5px;
-            height: 5px;
+            width: 3px; /* Stelle leggermente più piccole */
+            height: 3px;
             background-color: #fff;
             border-radius: 50%;
-            opacity: 0.5;
-            animation: starMovement 60s linear infinite, twinkle 2s linear infinite alternate;
+            opacity: 0.7; /* Stelle leggermente più visibili */
+            animation: twinkle 2s linear infinite alternate;
         }
 
-        @keyframes rotateStars {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        @keyframes starMovement {
-            0% { transform: translate(0, 0); }
-            100% { transform: translate(100px, 100px); }
-        }
+        /* Posizionamento di più stelle */
+        .star:nth-child(1) { top: 10%; left: 15%; }
+        .star:nth-child(2) { top: 70%; left: 85%; }
+        .star:nth-child(3) { top: 30%; left: 5%; }
+        .star:nth-child(4) { top: 90%; left: 40%; }
+        .star:nth-child(5) { top: 5%; left: 60%; }
+        .star:nth-child(6) { top: 55%; left: 20%; }
+        .star:nth-child(7) { top: 20%; left: 95%; }
+        .star:nth-child(8) { top: 80%; left: 30%; }
+        .star:nth-child(9) { top: 45%; left: 75%; }
+        .star:nth-child(10) { top: 15%; left: 45%; }
+        .star:nth-child(11) { top: 65%; left: 55%; }
+        .star:nth-child(12) { top: 35%; left: 80%; }
+        .star:nth-child(13) { top: 85%; left: 10%; }
+        .star:nth-child(14) { top: 50%; left: 90%; }
+        .star:nth-child(15) { top: 25%; left: 35%; }
+        /* Aggiungi altre stelle a piacere */
 
         @keyframes twinkle {
-            0% { opacity: 0.5; }
-            100% { opacity: 0.8; }
+            0% { opacity: 0.7; transform: scale(1); }
+            100% { opacity: 1; transform: scale(1.1); }
         }
 
         /* Nascondi inizialmente la vecchia struttura delle sezioni */
@@ -210,21 +224,38 @@
         #blender-projects {
             display: flex; /* Mostra i progetti Blender all'inizio (se vuoi) */
         }
+
+        /* Stili per la sezione Contatti */
+        #contatti p {
+            font-size: 1.1rem;
+            margin-bottom: 1rem;
+        }
+
+        #contatti a {
+            display: inline-block;
+            margin: 0 10px;
+            font-size: 1.5rem; /* Icone social più grandi */
+        }
     </style>
 </head>
 <body>
     <div class="starry-background">
-        <div class="star" style="top: 15%; left: 25%;"></div>
-        <div class="star" style="top: 60%; left: 70%;"></div>
-        <div class="star" style="top: 35%; left: 10%;"></div>
-        <div class="star" style="top: 80%; left: 50%;"></div>
-        <div class="star" style="top: 10%; left: 90%;"></div>
-        <div class="star" style="top: 50%; left: 30%;"></div>
-        <div class="star" style="top: 75%; left: 85%;"></div>
-        <div class="star" style="top: 20%; left: 65%;"></div>
-        <div class="star" style="top: 40%; left: 45%;"></div>
-        <div class="star" style="top: 90%; left: 15%;"></div>
-    </div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        </div>
 
     <header>
         <h1>Elia Giordano</h1>
@@ -235,6 +266,7 @@
         <button data-section="chi-sono">Chi Sono</button>
         <button data-section="competenze">Competenze</button>
         <button data-section="progetti">Progetti</button>
+        <button data-section="contatti">Contatti</button>
     </div>
 
     <div id="chi-sono" class="content-section active">
@@ -245,11 +277,7 @@
     <div id="competenze" class="content-section">
         <h2>Competenze</h2>
         <div class="competence-icons">
-            <span>🖌️</span>
-            <span>🎨</span>
-            <span>🛸</span>
-            <span>✨</span>
-        </div>
+            <span><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2L4.5 20.29l.71.71L12 18l6.79 3 71-.71L12 2z"/></svg></span> <span><svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 3h18v18H3z"/></svg></span> <span><svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2z"/></svg></span> <span><svg viewBox="0 0 24 24" fill="currentColor"><path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/></svg></span> </div>
         <p>Modellazione 3D, Logo Design, UI futuristica, Animazioni spaziali, Blender, Photoshop, Illustrator, InDesign, AutoCAD, Inventor, 3ds Max</p>
     </div>
 
@@ -287,6 +315,14 @@
         </div>
     </div>
 
+    <div id="contatti" class="content-section">
+        <h2>Contatti</h2>
+        <p>Mi puoi contattare tramite i seguenti canali:</p>
+        <p><a href="mailto:your.email@example.com">✉️ La mia email</a></p>
+        <p><a href="https://www.linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer">🔗 LinkedIn</a></p>
+        <p><a href="https://www.artstation.com/yourprofile" target="_blank" rel="noopener noreferrer">🎨 ArtStation</a></p>
+        </div>
+
     <footer>
         © 2025 Elia Giordano. Tutti i diritti riservati.
     </footer>
@@ -298,6 +334,8 @@
         const blenderProjects = document.getElementById("blender-projects");
         const photoshopProjects = document.getElementById("photoshop-projects");
         const illustratorProjects = document.getElementById("illustrator-projects");
+        const starryBackground = document.querySelector('.starry-background');
+        const stars = document.querySelectorAll('.starry-background .star');
 
         // Mostra la prima sezione (Chi Sono) all'inizio
         if (contentSections.length > 0) {
@@ -328,7 +366,7 @@
 
                 // Nascondi tutte le sezioni di progetto
                 blenderProjects.style.display = "none";
-                if (photoshopProjects) photoshopProjects.style.display = "none";
+                if (photphotoshopProjects) photoshopProjects.style.display = "none";
                 if (illustratorProjects) illustratorProjects.style.display = "none";
 
                 // Mostra la sezione di progetto corrispondente
@@ -339,6 +377,42 @@
                 } else if (selectedSoftware === "illustrator") {
                     if (illustratorProjects) illustratorProjects.style.display = "flex";
                 }
+            });
+        }
+
+        // Effetto "magnetico" delle stelle (semplice avvicinamento all'hover dello sfondo)
+        if (starryBackground) {
+            starryBackground.addEventListener('mousemove', (e) => {
+                const bgRect = starryBackground.getBoundingClientRect();
+                const mouseX = e.clientX - bgRect.left;
+                const mouseY = e.clientY - bgRect.top;
+                const bgWidth = bgRect.width;
+                const bgHeight = bgRect.height;
+
+                stars.forEach(star => {
+                    const starRect = star.getBoundingClientRect();
+                    const starX = starRect.left + starRect.width / 2 - bgRect.left;
+                    const starY = starRect.top + starRect.height / 2 - bgRect.top;
+
+                    const distanceX = mouseX - starX;
+                    const distanceY = mouseY - starY;
+                    const distance = Math.sqrt(distanceX * distanceX + distanceY * distanceY);
+
+                    const attractionRadius = 150; // Raggio entro cui le stelle sono "attratte"
+                    const scaleFactor = Math.max(1, 1 + (attractionRadius - distance) / (attractionRadius * 3)); // Scala in base alla distanza
+
+                    if (distance < attractionRadius) {
+                        star.style.transform = `translate(${distanceX / (attractionRadius / 5)}px, ${distanceY / (attractionRadius / 5)}px) scale(${scaleFactor})`;
+                    } else {
+                        star.style.transform = 'translate(0, 0) scale(1)';
+                    }
+                });
+            });
+
+            starryBackground.addEventListener('mouseleave', () => {
+                stars.forEach(star => {
+                    star.style.transform = 'translate(0, 0) scale(1)';
+                });
             });
         }
     </script>
