--- a/index.html
+++ b/index.html
@@ -178,6 +178,58 @@
             background-color: rgba(0, 191, 255, 0.3);
         }
 
+        /* Planets */
+        .planet {
+            position: fixed;
+            border-radius: 50%;
+            opacity: 0.3;
+            z-index: 1; /* Pianeti sopra lo sfondo ma sotto la mano */
+            box-shadow: 0 0 30px;
+            animation: float 15s ease-in-out infinite;
+        }
+
+        .planet-1 {
+            width: 80px;
+            height: 80px;
+            background-color: #ff6b6b;
+            top: 15%;
+            left: 85%;
+            box-shadow: 0 0 30px #ff6b6b;
+            animation-delay: 0s;
+        }
+
+        .planet-2 {
+            width: 120px;
+            height: 120px;
+            background-color: #48dbfb;
+            top: 75%;
+            left: 10%;
+            box-shadow: 0 0 30px #48dbfb;
+            animation-delay: 1s;
+        }
+
+        .planet-3 {
+            width: 60px;
+            height: 60px;
+            background-color: #feca57;
+            top: 40%;
+            left: 90%;
+            box-shadow: 0 0 30px #feca57;
+            animation-delay: 2s;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(0) rotate(0deg);
+            }
+            50% {
+                transform: translateY(-20px) rotate(3deg);
+            }
+            100% {
+                transform: translateY(0) rotate(0deg);
+            }
+        }
+
         /* Content Sections */
         .content-container {
             padding: 1rem;
@@ -612,6 +664,11 @@
         <div class="stars-container" id="stars-container"></div>
     </div>
 
+    <!-- Planets -->
+    <div class="planet planet-1"></div>
+    <div class="planet planet-2"></div>
+    <div class="planet planet-3"></div>
+
     <!-- Header -->
     <header>
         <h1>Elia Giordano</h1>
@@ -620,8 +677,8 @@
 
     <!-- Hand and Navigation Menu -->
     <div class="hand-container">
-        <!-- Immagine della mano (usando il file locale) -->
-        <img src="hand.png" alt="Mano" class="hand-image">
+        <!-- Immagine della mano (usando il file locale con estensione corretta) -->
+        <img src="hand.PNG" alt="Mano" class="hand-image">
         
         <!-- Navigation Menu -->
         <div class="nav-menu">
